--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
   --color-head: #c4c4c4;
   --color-picture-box: #f5f4fa;
   --color-client: #afb1b8;
+  --color-btn-form: #188ce8;
 }
 
 h1,
@@ -701,7 +702,74 @@ address {
   text-decoration: none;
 }
 
+.subscription-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--color-text1);
+  margin-bottom: 20px;
+}
+
+.subscription-footer {
+  margin-right: 12px;
+}
+
+.subscription-footer-input:focus {
+  outline: none;
+}
+
+.subscription-footer-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background: var(--color-main1-footer);
+  color: var(--color-text1);
+}
+
+.subscription-btn-position{
+  width: 144px;
+}
+
+.subscription-btn {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  background: var(--color-logo);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 1px solid var(--color-logo);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--color-text1);
+  cursor: pointer;
+}
+
+.subscription-btn-icon {
+  position: absolute;
+  top: 50%;
+  right: 28px;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+  fill: var(--color-text1);
+  margin-left: 12px;
+}
 /* End Footer  */
+
+/* Backdrop */
 
 .backdrop {
   position: fixed;
@@ -711,7 +779,6 @@ address {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   z-index: 10;
-
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
@@ -725,6 +792,9 @@ address {
   pointer-events: none;
 }
 
+/* /Backdrop  */
+
+/* MODAL WINDOW  */
 .modal {
   position: absolute;
   top: 50%;
@@ -732,6 +802,7 @@ address {
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
+  padding: 40px;
   background: var(--color-text1);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -756,4 +827,175 @@ address {
   background: var(--color-text1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-close-btn:hover {
+  fill: var(--color-logo);
+}
+/* /MODAL WINDOW  */
+
+/* MODAL FORM  */
+.modal-form-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  margin-bottom: 12px;
+  letter-spacing: 0.03em;
+  color: var(--color-text2);
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
+}
+
+.modal-form-field-desc {
+  display: block;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  margin-bottom: 4px;
+  letter-spacing: 0.01em;
+  color: var(--color-text3);
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  border-color: var(--color-logo);
+  outline: none;
+}
+
+.modal-form-person {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus + .modal-form-person {
+  fill: var(--color-logo);
+}
+
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message::placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-message:focus {
+  border-color: var(--color-logo);
+  outline: none;
+}
+
+.modal-form-check-field {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modal-form-check {
+  appearance: none;
+  position: absolute;
+}
+
+.modal-form-own-checkbox {
+  width: 16px;
+  height: 15px;
+  border: 1px solid var(--black-);
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 7px;
+}
+
+.modal-form-own-checkbox-icon {
+  display: none;
+  fill: var(--color-text1);
+}
+
+.modal-form-check:checked + .modal-form-own-checkbox {
+  background-color: var(--color-logo);
+}
+
+.modal-form-check:checked
+  + .modal-form-own-checkbox
+  .modal-form-own-checkbox-icon {
+  display: block;
+}
+
+.modal-form-check:focus + .modal-form-own-checkbox {
+  box-shadow: 0 0 0 2px rgba(0, 0, 255, 0.5);
+}
+
+.modal-form-submit {
+  width: 200px;
+  height: 50px;
+  background: var(--color-logo);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--color-text1);
+  border: 1px solid var(--color-logo);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--color-text1);
+  cursor: pointer;
+  align-self: center;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+  background: var(--color-btn-form);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+/* /MODAL FORM  */
