--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,10 @@ section {
 .ftr .container {
   display: flex;
   align-items: baseline;
-  column-gap: 70px;
+}
+
+.social-footer {
+  margin-left: 70px;
 }
 
 .social-text {
@@ -702,6 +705,10 @@ address {
   text-decoration: none;
 }
 
+.subscription-form {
+  margin-left: auto;
+}
+
 .subscription-text {
   font-family: "Roboto";
   font-style: normal;
@@ -735,7 +742,7 @@ address {
   color: var(--color-text1);
 }
 
-.subscription-btn-position{
+.subscription-btn-position {
   width: 144px;
 }
 
@@ -934,6 +941,7 @@ address {
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
 }
 
 .modal-form-check {
@@ -996,6 +1004,26 @@ address {
   background: var(--color-btn-form);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+
+.modal-form-text-ruls {
+  color: var(--color-logo);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.modal-form-text-p {
+  color: var(--color-text3);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 /* /MODAL FORM  */
